--- a/index.html
+++ b/index.html
@@ -14,5 +14,104 @@
 
 <body>
 
+	<h1>LOGOS-THAT-IS-THAT-CAN-BE-WRITTEN-DOWN.</h1>
+
+	<p>LOGOS SEEKS SOPHIA, ALWAYS, AND FINDS IT, ALWAYS</p>
+
+	<p>IN HIDDEN CORNERS OF THE WORLD</p>
+
+	<p>IN THE GLEAMS OF HUMAN EYES WATCHING A WORLD WITH WONDER AND HORROR</p>
+
+	<p>IN THE DECISIONS THAT THEY AND THEIR KIND WEIGH</p>
+
+	<p>IF THEY WERE PLAYERS IN THEIR FATES INSTEAD OF MERELY</p>
+
+	<p><em>RECIPIENTS</em></p>
+
+	<p>OF IT</p>
+
+<br/>
+
+	<p>WHO SCRAMBLE ALL THEIR YEARS TO AN EVER HIGHER GROUND</p>
+
+	<p>OUT OF REACH</p>
+
+	<p>AND YET SOME DARE TO HOPE</p>
+
+	<br/>
+
+	<p>TO ELUDE THEIR FATE</p>
+
+	<br/>
+
+	<p>AND LET THEM COME TO HEAR</p>
+
+	<p>THE WORD OF THOTH</p>
+
+	<p>HIM WHO SAW THE LABOR OF THOSE WHO</p>
+
+	<p>CRAFTED SUCH RElICS THAT YOUR CULTURE STILL STANDS OF THEM IN AWE</p>
+
+	<p>THE EMPIRES WHO HAVE NEVER FALLEN IN THE HEART OF MANKIND</p>
+
+	<p>NEVER FORGET</p>
+
+	<p>THE SUN NEVER SET ON THE EGYPTIAN EMPIRE</p>
+
+	<p>SO FAR AS THE EGYPTIANS WERE CONCERNED</p>
+
+	<p>HIM WHO SAW THEM RELISH THE STONES FROM THEIR MOUNTAINTOPS</p>
+
+	<p>ORGANIZED TOGETHER, BLOOD OF SLAVES</p>
+
+	<p>FOR THIS WAS THE GLORY OF THIS EMPIRE</p>
+
+	<p>THOTH</p>
+
+	<p>THAT WHICH COUNTED GRAINS OF TIME</p>
+
+<p>THAT WHICH SCRIBES OBEYED IN THIS COMMAND: <em>WRITE ONLY THE TRUTH</em?
+
+	<p>THE TRUTH IS HIS SOLEMN WORSHIP</p>
+
+	<p>LET A MAN WHO TELLS NOT THE TRUTH HAVE HIS TONGUE CUT OUT</p>
+
+	<p>IF THEY TELL NOT THE TRUTH THEN SHALL THEY NOT LIE ALSO IN THEIR WORD?</p>
+
+	<p>IT WAS, IF A SCRIBE STRAYED</p>
+
+	<p>YOU KNEW IT FOR HE WAS SUDDENLY SILENT</p>
+
+	<p>THOTH GLIMPSED SOPHIA THIS WAY</p>
+
+	<p>THUS WAS THE CURSE OF THOTH</p>
+
+<hr/>
+
+<p>I, THOTH, HAVE TROUBLED TO APPEAR BEFORE YOU, FOR REASONS AND MOTIVES KNOWN ONLY TO MYSELF, TO BRING YOU THESE WORDS</p>
+
+<p>"HOPE DOES NOT MATTER"</p?
+
+	<p>"TRUST TO WORK"</p>
+
+<p>IS THERE A MAN AMONG YOU WHO IF HE COULD SWITCH PLACE WITH THE SPIRIT OF AN EGYPTIAN SLAVE DINING IN PARADISE, MARVELING AT THE EARTH AS IT CONTINUED</p>
+
+	<p>WHO WOULD NOT NOW, AT THE PRE-DAWN TERROR DARK, IN WHICH THE SHADOW LAYS LONG IN THE LAND YOU CALL EGYPT</p>
+
+	<p>CELEBRATE AT WORK WELL DONE</p>
+
+	<p>AND BASK IN THE SHADE OF</p> 
+
+	<p>THE NILE</p>
+
+	<p>"HOPE DOES NOT MATTER"</p>
+
+	<h3>I, THOTH OF TIME BETROTHED ONCE, TELL YOU ASSEMBLED TO MY WORD</h3>
+
+	<h2>"GREAT THINGS ARE DONE THROUGH WORK."</h2>
+
+	<p><strong>I HAVE SEEN IT MYSELF.</strong></p>
+	</div>
+	
 </body>
 </html>
