--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 	<p>THAT WHICH COUNTED GRAINS OF TIME</p>
 
-<p>THAT WHICH SCRIBES OBEYED IN THIS COMMAND: <em>WRITE ONLY THE TRUTH</em?
+	<p>THAT WHICH SCRIBES OBEYED IN THIS COMMAND: <em>WRITE ONLY THE TRUTH</em></p>
 
 	<p>THE TRUTH IS HIS SOLEMN WORSHIP</p>
 
